2010-06-23  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResourceManager.m
	reformat statics, add TheStringsTableLock
	add _cachedStringsTable()
	add _cachedStringForKey()
	rewrote -stringForKey:inTableNamed:withDefaultValue:inFramework:languages:
	use NONESTR, not @"NONE"
	* Testing/DynamicElements/ImagePage.h
	* Testing/DynamicElements/Resources/Chinese.lproj/Localizable.strings
	* Testing/DynamicElements/Resources/Russian.lproj/Localizable.strings
	* Testing/DynamicElements/Resources/French.lproj/Localizable.strings
	* Testing/DynamicElements/Resources/English.lproj/Localizable.strings
	* Testing/DynamicElements/Resources/German.lproj/Localizable.strings
	* Testing/DynamicElements/ImagePage.m
	* Testing/DynamicElements/ImagePage.wo
	add test for GSWResourceManager's -stringForKey:inTableNamed:withDefaultValue:inFramework:languages:
	* Testing/DynamicElements/DynamicElements.m
	set UTF8 encoding
	* Testing/DynamicElements/GNUmakefile
	add new files

2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResponse.m
	* GSWeb/GSWHTTPIO.m
	do not add ETag
	* GSWeb/GSWResourceRequestHandler.h
	add request: argument to _responseForDataAtPath:
	* GSWeb/GSWResourceRequestHandler.m
	add request: argument to _responseForDataAtPath:
	_responseForDataAtPath:request:
	generate Last-Modified header
	generate ETag header
	use hash of modification date and size
	(faster than over a large NSData object)
	check for if-none-match header
	
2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWeb/GSWResourceManager.m
	make url prefix dynamic based on [request _applicationURLPrefix]

2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWExtensions/Resources/Info-gnustep.plist
	delete
	* GSWExtensions/GNUmakefile
	let makefiles generate Info-gnustep.plist

2010-06-22  David Wetzel <dave@turbocat.de>
	* GSWExtensions/Resources/Info-gnustep.plist
	* GSWExtensions/GNUmakefile
	fix framework name to be able to load files from the right bundle

2010-06-22  David Wetzel <dave@turbocat.de>